--- a/app/views/tasks/new.html.haml
+++ b/app/views/tasks/new.html.haml
@@ -1,6 +1,11 @@
 %h1 New Task
 
 = form_for @task do |f|
+  - if @task.errors.any?
+    %ul
+      - @task.errors.full_messages.each do |msg|
+        %li= msg
+
   %p
     = f.label :project_id
     = f.select :project_id, Project.all.map { |p| [p.name, p.id] }, include_blank: '- Choose a Project -'
