--- a/app/views/tasks/new.html.haml
+++ b/app/views/tasks/new.html.haml
@@ -1,10 +1,7 @@
 %h1 New Task
 
 = form_for @task do |f|
-  - if @task.errors.any?
-    %ul
-      - @task.errors.full_messages.each do |msg|
-        %li= msg
+  = render 'shared/error_messages', model: @task
 
   %p
     = f.label :project_id
