--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -12,6 +12,7 @@
     - @tasks.each do |task|
       %li{ id: "task_#{task.id}" }
         = task.name
+        (Duration: #{task.duration(@filtered_date)})
         .action_link= render 'action_link', task: task
 - else
   %p You don't have tasks. #{link_to 'Create your first task', new_task_path}
